[gd_scene load_steps=7 format=2]

[ext_resource path="res://assets/textures/enemies/player_robot.png" type="Texture" id=1]
[ext_resource path="res://entities/enemies/PlayerEnemy.gd" type="Script" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 4.7685, 18.3056 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 12.2422, 24.7417 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 12.5462, 4.45591 )

[sub_resource type="Animation" id=4]
resource_name = "dead"
length = 0.183
step = 0.03
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.03, 0.06, 0.09, 0.12, 0.15, 0.18 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 2.506, -0.5 ), Vector2( 2.506, 1 ), Vector2( 2.506, 3 ), Vector2( 2.506, 5 ), Vector2( 2.506, 8 ), Vector2( 2.506, 10 ), Vector2( 2.506, 13 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.03, 0.06, 0.09, 0.12, 0.15, 0.18 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0.076, 0.07 ), Vector2( 0.076, 0.06 ), Vector2( 0.076, 0.05 ), Vector2( 0.076, 0.04 ), Vector2( 0.076, 0.03 ), Vector2( 0.076, 0.02 ), Vector2( 0.076, 0.01 ) ]
}

[node name="PlayerEnemy" type="KinematicBody2D"]
script = ExtResource( 2 )
__meta__ = {
"_edit_group_": true
}

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 2.63843, -0.102702 )
scale = Vector2( 0.0752054, 0.0724279 )
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -0.586, 7.923 )
shape = SubResource( 1 )

[node name="Tween" type="Tween" parent="."]
repeat = true
playback/repeat = true

[node name="BodyArea" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="BodyArea"]
position = Vector2( 0, 3.62227 )
shape = SubResource( 2 )

[node name="HeadArea" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="HeadArea"]
position = Vector2( -0.31498, -28.0673 )
shape = SubResource( 3 )

[node name="TargetTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/dead = SubResource( 4 )

[connection signal="body_entered" from="BodyArea" to="." method="_on_BodyArea_body_entered"]
[connection signal="body_exited" from="BodyArea" to="." method="_on_BodyArea_body_exited"]
[connection signal="body_entered" from="HeadArea" to="." method="_on_HeadArea_body_entered"]
[connection signal="timeout" from="TargetTimer" to="." method="_on_TargetTimer_timeout"]
